# zkaf_sp1

./: .gitignore  Cargo.toml  Dockerfile  README.md
inputs/: zk_params.json
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
tlsn-substrings-verifier/: Cargo.toml
tlsn-substrings-verifier/src/: lib.rs
tlsn-substrings-verifier/src/proof/: session.rs  substrings.rs
