[package]
version = "0.1.0"
name = "zkaf-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
tlsn-substrings-verifier = { path = "../tlsn-substrings-verifier" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
serde = "1.0"
serde_json = "1.0.107"
